# persona_bot

./: .gitignore  README.md  a.sh  causal_models_sandbox.ipynb  causal_train.sh  chat_with_seq2seq_bot.sh  dataloasers-sandbox.ipynb  deepspeed_seq2seq.sh  eng_datasets.md  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_8bits.txt  run_bart_gradio_app.sh  russian_datasets.md  seq2seq_debug.sh  seq2seq_train.sh  start_telegram_bot.sh
database/postgre_docker_compose/: postgresql.conf
dimweb_persona_bot/: utils.py
dimweb_persona_bot/database_logger/: database-sandbox.ipynb
dimweb_persona_bot/dataloaders/: datasets.py  ru_anekdots_dialogs_dataloaders.py  ru_cornel_movie_corpus.py  ru_cornel_movie_corpus_dataloaders.py  ru_danetqa_dataloaders.py  ru_flibusta_dialogs_dataloaders.py  ru_parus_dataloaders.py  ru_persona_chat_dataloaders.py  ru_rubq20_dataloaders.py
dimweb_persona_bot/datasets_transformers/: persona_chat_dataset_transformer.py  ru_persona_chat_dataset_transformer.py
dimweb_persona_bot/eda/: eda_scripts.py  tokens_length_seq2seq_models_ru_persona_chat.csv  tokens_length_seq2seq_models_ru_persona_chat_facebook_nllb-200-distilled-600M.csv
dimweb_persona_bot/hyperparameters/: causal_modeling_hyperparameters.py
dimweb_persona_bot/inference/: README.md  seq2seq_bots.py
dimweb_persona_bot/lighting_models/: causal_lighting_models.py  seq2seq_lighting_models.py
dimweb_persona_bot/sandboxes/: dataloaders-sandbox.ipynb  huggingface_datasets_sandbox.ipynb  (+6 more)
sandboxes/: database-sandbox.ipynb  wandb-sandbox.ipynb
src/: utils.py
(+57 files in other folders)
