[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimweb_persona_bot"
version = "0.0.1"
authors = [
  { name="dimweb", email="dimweb.tech@mail.ru" },
]
description = "A dialogue bot with a personality"
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github page" = "https://github.com/dmitrymailk/persona_bot"