[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "dimweb_persona_bot"
version = "0.0.6"
authors = [
  { name="dimweb", email="dimweb.tech@mail.ru" },
]
description = "A dialogue bot with a personality"
readme = "README.md"
requires-python = ">=3.7.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "peewee==3.15.4",
  "transformers==4.25.1",
  "pytorch-lightning==1.7.6",
  "numpy",
  "pandas",
  "wandb==0.13.5",
  "datasets==2.4.0",
  "rouge-score==0.0.4",
  "torchmetrics==0.7.0",
]
[project.urls]
"Github page" = "https://github.com/dmitrymailk/persona_bot"